Closed Bug 201299 Opened 22 years ago Closed 22 years ago

XUL trees and listboxes don't scroll from the scrollbar

Categories

(Core :: Layout, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(1 file)

This is fallout from my patch last night. When a scrollbar is (re)created because it uncollapsed, any mediator set is lost. So it loses its connection to its XUL tree or listbox.
I'm fixing this by only using '-moz-binding:none' on scrollbars which have been specially marked 'lazy' with an attribute. Only nsGfxScrollFrame sets that attribute on scrollbars (so trees don't get it), and nsGfxScrollFrame only sets it when it's wrapping non-XUL content (so XUL listboxes don't get it).
Attachment #119936 - Flags: superreview?(bzbarsky)
Attachment #119936 - Flags: review?(bzbarsky)
Comment on attachment 119936 [details] [diff] [review] fix Add some comments both in the C++ and the CSS explaining what the "lazy" is for?
Attachment #119936 - Flags: superreview?(bzbarsky)
Attachment #119936 - Flags: superreview+
Attachment #119936 - Flags: review?(bzbarsky)
Attachment #119936 - Flags: review+
Comments added and checked in. Boris, don't you ever sleep?
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Not enough, no.... :(
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: