Bug 201299. Make lazy scrollbars more selective to avoid XUL tree and listbox problems. r+sr=bzbarsky